--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -1,6 +1,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/angular/angular.min.js" type="text/javascript"></script>
-<script src="/angular/imageGalleryApp.js" type="text/javascript"></script>
+<script src="app.js" type="text/javascript"></script>
 <script src="/js/scripts.js" type="text/javascript"></script>
 <script src="/js/validation.js" type="text/javascript"></script>
