--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -53,7 +53,8 @@
     <script src="/angular/angular.min.js" type="text/javascript"></script>
     <script src="/lib/angular-route.min.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
-    <script src="/common/imageData.service.js" type="text/javascript"></script>
+    <script src="/common/services/imageData.service.js" type="text/javascript"></script>
+    <script src="/common/directives/imageHover.directive.js" type="text/javascript"></script>
     <script src="/home/home.controller.js" type="text/javascript"></script>
     <script src="/js/scripts.js" type="text/javascript"></script>
     <script src="/js/validation.js" type="text/javascript"></script>
