--- a/client/common/views/genericText.view.html
+++ b/client/common/views/genericText.view.html
@@ -5,7 +5,7 @@
     
     <div class="row">
         <div class="col-md-6 col-md-offset-3 col-sm-12">
-            <h4 class="text-center">{{ vm.main.content }}</h4>
+            <h4 class="text-center" ng-bind-html="vm.main.content | addHtmlLineBreaks"></h4>
         </div>
     </div>
     
