--- a/public/css/main.css
+++ b/public/css/main.css
@@ -140,10 +140,10 @@ hr {
 }
 
 .transition {
-    -webkit-transform: scale(1.1); 
-    -moz-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1);
+    -webkit-transform: scale(1.05); 
+    -moz-transform: scale(1.05);
+    -o-transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 /* Lightbox */
@@ -184,6 +184,10 @@ hr {
 /* Misc */
 
 .fa.fa-heart.like-btn {
+    color: crimson;
+}
+
+.fa.fa-heart-o.like-btn {
     color: crimson;
 }
 
